/*
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

option java_package = "org.apache.phoenix.coprocessor.generated";
option java_outer_classname = "CDCInfoProtos";
option java_generic_services = true;
option java_generate_equals_and_hash = true;
option optimize_for = SPEED;

message CDCColumnDef {
  required string columnName = 1;
  required bytes familyNameBytes = 2;
  required bytes columnQualifierBytes = 3;
  required string dataType = 4;
}

message CDCTableDef {
  optional bytes defaultFamilyName = 1;
  optional string cdcIncludeScopes = 2;
  required bytes qualifierEncodingScheme = 3;
  repeated CDCColumnDef columns = 4;
  required bytes cdcJsonColQualBytes = 5;
  optional bytes dataTableProjectorBytes = 6;
}
